--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -20,11 +20,11 @@
     }
 
     h1 {
-        @apply sm:text-4xl text-3xl;
+        @apply md:text-5xl text-4xl;
     }
 
     h2 {
-        @apply text-3xl;
+        @apply text-4xl;
     }
 
     h3 {
